# chat-server

src/ChatClient/: ChatClient.sln  ChatClient.vcxproj  main.cpp  main.qml  qml.qrc
src/ChatClient/client/: ChatClient.cpp  ChatClient.h
src/ChatClient/qml/: ChatRoom.qml  ChatWindow.qml  CreateRoom.qml  Home.qml  InviteUser.qml  Login.qml  main.qml  qml_utils.js
src/ChatServer/: .gitignore  CMakeLists.txt  ChatServer.sln  ChatServer.vcxproj  main.cpp
src/ChatServer/auth/: UserAuth.cpp  UserAuth.h
src/ChatServer/network/: ChatClientHandler.cpp  ChatClientHandler.h  ChatServer.cpp  ChatServer.h
src/ChatServer/queries/: message_queries.sql  room_queries.sql  user_queries.sql  user_room_queries.sql
src/ChatServer/redis/: RedisManager.cpp  RedisManager.h
src/ChatServer/utils/: DbUtils.cpp  DbUtils.h  env_loader.h
